# Office_Agent_Workspace

./: .gitignore  .mcp.json  .pylintrc  AI_TECHNOLOGIES_IMPLEMENTATION_REPORT.md  AI新闻.bat  ASSET_MANAGER_README.md  CLAUDE.md  CLAUDE.md.backup_20260114  CLAUDE_CODE_2.1_FEATURES_REPORT.md  CLAUDE_DEEPSEEK_SETUP.md  COMPLETE_SYSTEM_GUIDE.md  DIRECTORY_TREE.md  FIX_SYNTAX_HIGHLIGHTING.md  GITHUB_SETUP_GUIDE.md  GitHub仓库创建图文教程.md  MCP服务器使用指南.md  OFFICE_AGENT_STUDIO_README.md  PERSISTENCE_VERIFICATION.md  PROJECT_ROADMAP.md  PROJECT_SUMMARY_NOW.md  QUICK_LINKS.md  SUPER_BUTLER_SETUP.md  TASK_COMPLETION_REPORT.md  TODO.md  VSCODE_CLAUDE_DEEPSEEK_SETUP.md  WELCOME_MESSAGE.md  WORKSPACE_GUIDE.md  butler_mode.bat  check_screensaver.ps1  claude_ide.bat  code_version_tracker.py  create_shortcut.ps1  create_shortcut.py  create_shortcuts.py  create_snapshot.py  daily_file_organizer.py  daily_launcher.py  daily_snapshot.py  diagnose_python_support.bat  diagnose_vscode_python.bat  (+51 more)
.claude/: config-deepseek-reasoner.json  config-deepseek.json  config-haiku.json  config-opus.json  config-sonnet.json  load-env.ps1  settings.backup.20260106_173420.json  settings.local.json
00_Agent_Library/: CHROME_DEVTOOLS_GUIDE.md  CHROME_MCP_DEMO.md  CLAUDE_MEMORY_README.md  EVOLUTION_GUIDE.md  GLM_4.7_开发参考.md  MULTI_AGENT_DEMO_README.md  README.md  SKILL_CREATOR_GUIDE.md  agent_supervisor.py  agent_toolkit.py  ai_news_aggregator.py  claude_memory.py  config_center.py  diagram_generator.py  exceptions.py  fix_ssl_issue.py  glm_client.py  glm_knowledge_accessor.py  idea_workflow_engine.py  install_semantic_memory.py  learn_from_current_session.py  local_ai_engine.py  mcp_news_client.py  mcp_sqlite_wrapper.py  memory_monitor.py  memory_trigger.py  migrate_memories.py  multi_agent_demo.py  natural_language_search.py  news_reader.py  news_scraper.py  paddleocr_quick_test.py  plan_manager.py  proactive_advisor.py  semantic_memory.py  semantic_memory_fixed.py  session_initializer.py  session_lifecycle_manager.py  session_plan.py  skill_builder_facade.py  (+18 more)
01_Active_Projects/: asset_manager.py
05_Outputs/: ai_learning_evolution_research_report_20260116.md  claude_memory_v25_upgrade_guide_20260116.md  core_features_detailed_guide_20260116.md  daily_session_summary_20260116.md  daily_update_summary_20260116.md  evolution_decision_report_20260116.md  glm_knowledge_integration_report_20260116.md  improvement_summary_20260116.md  instant_execution_report_20260116.md  mermaid_theme_preview.md  mermaid_upgrade_summary.md  proactive_feedback_commitment_20260116.md  project_development_workflow_20260116.md  quick_test_results_20260116.md  semantic_memory_implementation_complete_20260116.md  semantic_memory_quick_reference_20260116.md  session_learning_report_20260116.md  session_startup_workflow_20260116.md  skill_integration_report_20260116.md  skill_seekers_deployment_complete_20260116.md  skill_seekers_integration_report_20260116.md  skills_test_demo_20260116.md  smart_business_automator_setup_complete_20260116.md  smart_business_automator_test_environment_ready_20260116.md  super_butler_workflow_diagram_20260116.md  tech_news_20260115_161407.md  tech_news_20260116_091642.md  testing_checklist_and_recommendations_20260116.md  v25_completion_summary_20260116.md  v25_integration_guide_20260116.md  v3_0_roadmap_20260116.md  workspace_architecture  workspace_architecture_mermaid.md  workspace_comprehensive_assessment_20260116.md
06_Learning_Journal/: AI_Agent学习路径规划.md  BAT文件完整使用指南.md  CLAUDE_MEMORY.md  MCP_CONFIG_LOG.md  WORKSPACE_MEMORY.md  evolution_log.json  evolution_report_20260112_194210.md  evolution_report_20260112_194250.md  evolution_report_20260115.md  evolution_report_20260116_092935.md  file_structure_optimization_report_20260115.md  full_implementation_report_20260112.md  langgraph_v0.3_research_report_20260115.md  learning_logger.py  market_supervision_agent_v4_completion_20260115.md  my_core_role_20260115.md  my_requirements_20260115.md  my_role_definition_20260115.md  partnership_evolution_plan.md  project_planner.py  security_fix_report_20260115.md  session_summary_20260115_am.md  version_registry.json  version_report_20260112_194210.md  version_report_20260112_194250.md  version_report_20260116_092935.md  workflow_full_test.html  workflow_visualization.html  workspace_cleanup_report_20260115.md  workspace_health_check_20260115.md  zread_research_report_20260112.md  今日启动器使用指南.md  使用指南_新对话快速开始.md  如何使用可点击链接.md  工作区管家运行模式说明.md  每日启动管家指南.md  流程图工具推荐_20260116.md  管家模式使用指南.md  自动化项目库.md  超级管家.py  (+1 more)
(+672 files in other folders)
