[tool.poetry]
name = "office-agent-workspace"
version = "2.0.0"
description = "Python 办公自动化工具集 - 智能体协作平台"
authors = ["flyskyson <flyskyson@workspace.local>"]
readme = "CLAUDE.md"
license = "MIT"
repository = "https://github.com/flyskyson/office-agent-workspace"
documentation = "https://github.com/flyskyson/office-agent-workspace/wiki"
keywords = ["automation", "agent", "ai", "office", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
# Web框架
streamlit = ">=1.28.0"
flask = ">=2.3.0"

# 浏览器自动化
playwright = ">=1.40.0"

# 文档处理
python-docx = ">=1.0.0"
pypdf2 = ">=3.0.0"
docxtpl = ">=0.16.0"

# 数据处理
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"

# OCR
paddleocr = ">=2.7.0"
baidu-aip = ">=4.0.0"

# 向量数据库
chromadb = ">=0.4.0"
sentence-transformers = ">=2.2.0"

# 工具库
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
requests = ">=2.31.0"

# 中文处理
jieba = ">=0.42.0"

# LangGraph 和 AI
langgraph = ">=0.0.20"
langchain = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
# 测试框架
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
pytest-asyncio = ">=0.21.0"

# 代码质量
black = ">=23.7.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.0"

# 文档
sphinx = ">=7.1.0"
sphinx-rtd-theme = ">=1.3.0"

# 安全
pip-audit = ">=2.6.0"
bandit = ">=1.7.0"

# 性能分析
py-spy = ">=0.3.14"
memory-profiler = ">=0.61.0"

[tool.poetry.scripts]
oa-studio = "office_agent_studio:main"
oa-config = "00_Agent_Library.config_center:cli"
oa-supervisor = "00_Agent_Library.agent_supervisor:main"
oa-workflow = "00_Agent_Library.workflow_templates:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ================================
# 工具配置
# ================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=00_Agent_Library",
    "--cov=01_Active_Projects",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # 自定义排除
  | 02_Project_Archive
  | 04_Data_&_Resources
  | 06_Learning_Journal
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = [
    "02_Project_Archive/*",
    "04_Data_&_Resources/*",
    "06_Learning_Journal/*",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
    "baidu_aip.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["00_Agent_Library", "01_Active_Projects"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "02_Project_Archive/*",
    "04_Data_&_Resources/*",
    "06_Learning_Journal/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "02_Project_Archive",
    "04_Data_&_Resources",
    "06_Learning_Journal",
]
skips = ["B101"]  # 允许 assert 语句
